syntax = "proto3";

package auth.v1;

import "common/v1/user.proto";
import "common/v1/session.proto";

option go_package = "github.com/Alexey-step/rocket-factory/shared/pkg/proto/auth/v1;auth_v1";


service AuthService {
  rpc Login(LoginRequest) returns (LoginResponse);
  rpc Whoami(WhoamiRequest) returns (WhoamiResponse);
}

// LoginRequest представляет запрос на логин пользователя
message LoginRequest {
  string login = 1; // Логин пользователя
  string password	= 2; //	Пароль пользователя
}

// LoginResponse представляет ответ на запрос логина
message LoginResponse {
  string session_uuid = 1; //	UUID активной сессии
}

// WhoamiRequest представляет запрос для получения информации о текущей сессии и пользователе
message WhoamiRequest {
  string session_uuid = 1; // UUID активной сессии
}

// WhoamiResponse представляет ответ на запрос WhoAmI
message WhoamiResponse {
  common.v1.Session session = 1; //	Информация о текущей сессии
  common.v1.User user = 2; //	Владелец текущей сессии
}
